<resources>
    <string name="app_name">My Band</string>

    <string name="local_toggle">registered</string>
    <string name="local_key">username</string>

    <string name="navigation_drawer_open">Navigationsfenster öffnen</string>
    <string name="navigation_drawer_close">Navigationsfenster schließen</string>

    <string name="action_settings">Einstellungen</string>
    <string name="action_logout">Ausloggen</string>
    <string name="title_activity_login">Einloggen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Adresse</string>
    <string name="prompt_password">Passwort</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_register">Registrieren</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="action_switch_to_register">Noch keinen Account?</string>
    <string name="action_switch_to_login">Bereits einen Account?</string>
    <string name="error_invalid_email">Email Adresse ist ungültig</string>
    <string name="error_invalid_password">Passwort zu kurz</string>
    <string name="error_incorrect_password">Password ist falsch</string>
    <string name="error_field_required">Pflichtfeld</string>
    <string name="permission_rationale">"Die Email-Autocompletion benötigt Zugriffsrechte auf
        Handykontakte.>
    </string>

    <!-- Server connection information -->
    <string name="servername">mb-serve.esy.es</string>

    <!-- Title bar strings for all activities -->
    <string name="title_fragment_login">Einloggen</string>
    <string name="title_fragment_registration">Einloggen</string>
    <string name="title_fragment_news">Neuigkeiten</string>
    <string name="title_fragment_finances">Finanzen</string>
    <string name="title_fragment_calendar">Eventkalender</string>
    <string name="title_fragment_contacts">Kontakte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_news_no_content"><i>Keine Neuigkeiten bisher</i></string>
    <string name="text_calendar_no_content"><i>Keine Events bisher</i></string>
    <string name="text_finances_no_content"><i>Keine Transaktionen bisher</i></string>
    <string name="text_contacts_no_content"><i>Keine Kontakte bisher</i></string>

    <string name="text_no_band"><i>Keine Band ausgewählt</i></string>
    <string name="title_activity_profile">ProfileSettings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
